<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp"
    >

    <com.example.sukurax.psychologyheal.XCRoundImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/pictest"
        android:layout_marginTop="32dp"
        android:id="@+id/XCRoundImageView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nicknameChinese"
        android:textSize="18sp"
        android:layout_marginTop="48dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/nickname"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordChinese"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:id="@+id/registerPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordConfirm"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:id="@+id/registerPasswordConfirm"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerAndLogin"
        android:id="@+id/registerAndLogin"
        android:background="@drawable/shape_corner"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/toBeDoctor"
        android:textColor="@color/colorLightGrey"
        android:id="@+id/toBeDoctor"/>


</LinearLayout>