<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:baselineAligned="false"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/backtoolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorAccent"
                android:elevation="6dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <ImageView
                    android:id="@+id/doctorIfoBackBtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrowback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/doctorIfoChinese"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingTop="16dp">

                        <com.example.sukurax.psychologyheal.XCRoundImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/doctorpic3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="赵小若"
                            android:textColor="#000000"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/strengthChinese"
                            android:textColor="#000000"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:background="@drawable/roundborder_8bc34a"
                            android:padding="2dp"
                            android:text="学习"
                            android:textColor="#8BC34A"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:background="@drawable/roundborder"
                            android:padding="3dp"
                            android:text="恋爱"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:text="擅长孩子教育、家庭教育、考试焦虑，厌学逃学，手机、电脑网络成瘾，孩子叛逆，与孩子无法交流，志愿填报，选择专业，选择学校等。"
                            android:textColor="#424242"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="6dp">

                    <Button
                        android:id="@+id/followBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/shape_corner_40c4ff"
                        android:elevation="3dp"
                        android:text="@string/followChinese"
                        android:textColor="#40C4FF"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/privateChat"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/shape_corner_69f0ae"
                        android:elevation="3dp"
                        android:text="@string/pchatChinese"
                        android:textColor="#69F0AE"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/orderBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/shape_corner_fe4051"
                        android:elevation="3dp"
                        android:text="@string/orderingChinese"
                        android:textColor="#FE4051"
                        android:textSize="20sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--专栏题头-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="他的专栏"
                    android:textColor="#757575"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/More"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/more"
                    android:textColor="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/doc3article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <!--精选文章标题-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/brilliantCircleName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:ellipsize="end"
                                android:maxEms="12"
                                android:maxLines="1"
                                android:text="为什么你想学却学不进去？"
                                android:textColor="#000000"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:background="@drawable/roundborder_8bc34a"
                                    android:padding="2dp"
                                    android:text="学习"
                                    android:textColor="#8BC34A"
                                    android:textSize="10sp" />

                                <ImageView
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:layout_marginLeft="4dp"
                                    app:srcCompat="@drawable/eye" />

                                <TextView
                                    android:id="@+id/textView8"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4dp"
                                    android:text="755"
                                    android:textColor="#BDBDBD"
                                    android:textSize="10sp" />

                                <ImageView
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    android:layout_marginLeft="4dp"
                                    app:srcCompat="@drawable/gray_heart" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="4dp"
                                    android:text="45"
                                    android:textColor="#BDBDBD"
                                    android:textSize="10sp" />

                            </LinearLayout>


                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <!--精选文章图片-->
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="162dp"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/article5" />
                            <!--精选文章内容-->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/brilliantArticleContent"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="16dp"
                                    android:ellipsize="end"
                                    android:maxLines="2"
                                    android:text="几乎所有人都希望自己成长，几乎所有人都知道成长需要学习，而且确实很多人在寻求知识，希望成长。但如何才能真正成长？先来看看生活中的现象。"
                                    android:textColor="#424242"
                                    android:textSize="14sp" />

                            </LinearLayout>
                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>
            <!--评论题头-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="评论"
                    android:textColor="#757575"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/More"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/more"
                    android:textColor="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--评论3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorWhite"
                android:padding="8dp">

                <com.example.sukurax.psychologyheal.XCRoundImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/pictest" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="kayl"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="四日前"
                            android:textColor="#747474"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="文章写的道理是有点对，是有那么一群人心里装的太多，融不进别的东西，可还不自知，总是很愚直的认为只要继续学习可以解决万事。这是不了解客观自己的人总会有的想法。"
                        android:textColor="#424242"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>